# bytemuck

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE-0BSD.md  README.md  appveyor.yml  build.rs  changelog.md  rustfmt.toml
.github/workflows/: rust.yml
contigous_bitset/: Cargo.toml
contigous_bitset/src/: lib.rs
contiguous_bitset/: Cargo.toml
contiguous_bitset/src/: lib.rs
contiguous_bitset/tests/: all.rs
derive/: Cargo.toml  LICENSE-ZLIB  changelog.md
derive/src/: lib.rs  traits.rs
derive/tests/: basic.rs  transparent_wrapper_generic.rs  trybuild_tests.rs
derive/tests/trybuild_tests_src/: contiguous_derive_failure.rs  contiguous_derive_failure.stderr  derive.rs  nonzeroable_fields.rs  nonzeroable_fields.stderr  pod_derive_failure.stderr  transparentwrapper_failure.rs  transparentwrapper_failure.stderr
scripts/: travis.sh
scripts/generic-cross/.cargo/: config
scripts/linux-android/.cargo/: config
scripts/windows-android/.cargo/: config
src/: allocation.rs  anybitpattern.rs  cast.rs  checked.rs  contigous_bitset.rs  contiguous.rs  internal.rs  lib.rs  maybe_pod.rs  must.rs  no_uninit.rs  nopadding.rs  offset_of.rs  pod.rs  pod_in_option.rs  relaxed.rs  transparent.rs  unaligned.rs  zeroable.rs  zeroable_in_option.rs
tests/: array_tests.rs  cast_slice_tests.rs  checked_tests.rs  derive.rs  doc_tests.rs  std_tests.rs  transparent.rs  trybuild_tests.rs  unified_cast_alloc_tests.rs  unified_cast_tests.rs
tests/trybuild_tests_src/: derive.rs  pod_derive_failure.rs
uitest/: Cargo.toml
uitest/tests/: ui.rs
uitest/tests/ui/: reinterpret_incompatible.rs  reinterpret_incompatible.stderr  reinterpret_inner_arc.rs  reinterpret_inner_arc.stderr  reinterpret_inner_arc_weak.rs  reinterpret_inner_arc_weak.stderr  reinterpret_inner_atomic_ptr.rs  reinterpret_inner_atomic_ptr.stderr  reinterpret_inner_box.rs  reinterpret_inner_box.stderr  reinterpret_inner_const_ptr.rs  reinterpret_inner_const_ptr.stderr  reinterpret_inner_cow.rs  reinterpret_inner_cow.stderr  reinterpret_inner_mut.rs  reinterpret_inner_mut.stderr  reinterpret_inner_mut_ptr.rs  reinterpret_inner_mut_ptr.stderr  reinterpret_inner_non_null.rs  reinterpret_inner_non_null.stderr  reinterpret_inner_option.rs  reinterpret_inner_option.stderr  reinterpret_inner_pin.rs  reinterpret_inner_pin.stderr  reinterpret_inner_rc.rs  reinterpret_inner_rc.stderr  reinterpret_inner_rc_weak.rs  reinterpret_inner_rc_weak.stderr  reinterpret_inner_ref.rs  reinterpret_inner_ref.stderr  reinterpret_inner_vec.rs  reinterpret_inner_vec.stderr  reinterpret_wrong_size.rs  reinterpret_wrong_size.stderr  try_reinterpret_inner_arc.rs  try_reinterpret_inner_arc.stderr  try_reinterpret_inner_arc_weak.rs  try_reinterpret_inner_arc_weak.stderr  try_reinterpret_inner_atomic_ptr.rs  try_reinterpret_inner_atomic_ptr.stderr  (+26 more)
