[package]
name = "bytemuck"
description = "A crate for mucking around with piles of bytes."
version = "1.4.1"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/bytemuck"
readme = "README.md"
keywords = ["transmute", "bytes", "casting"]
categories = ["encoding", "no-std"]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"
exclude = ["/pedantic.bat"]

[features]
# Note: Yeah these names are non-standard, we'll fix it in v2 some day maybe
extern_crate_alloc = []
extern_crate_std = ["extern_crate_alloc"]
zeroable_maybe_uninit = []
derive = ["bytemuck_derive"]

[dependencies]
# use the upper line for testing against bytemuck_derive changes, if any
#bytemuck_derive = { version = "1.0.1-alpha.0", path = "derive", optional = true }
bytemuck_derive = { version = "1", optional = true }

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true
