[package]
name = "bytemuck"
description = "A crate for mucking around with piles of bytes."
version = "1.13.1"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/bytemuck"
readme = "README.md"
keywords = ["transmute", "bytes", "casting"]
categories = ["encoding", "no-std"]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"
exclude = ["/pedantic.bat"]

[features]
# In v2 we'll fix these names to be more "normal".
derive = ["bytemuck_derive"]
extern_crate_alloc = []
extern_crate_std = ["extern_crate_alloc"]
zeroable_maybe_uninit = []
zeroable_atomics = []
min_const_generics = []
wasm_simd = [] # Until >= 1.54.0 is MSRV this is an off-by-default feature.
aarch64_simd = [] # Until >= 1.59.0 is MSRV this is an off-by-default feature.

# Do not use if you can avoid it, because this is unsound.
unsound_ptr_pod_impl = []

# NOT SEMVER SUPPORTED! TEMPORARY ONLY!
nightly_portable_simd = []
nightly_stdsimd = []

[dependencies]
bytemuck_derive = { version = "1.4", path = "derive", optional = true }

[package.metadata.docs.rs]
# Note(Lokathor): Don't use all-features or it would use `unsound_ptr_pod_impl` too.
features = [
  "derive",
  "extern_crate_alloc",
  "extern_crate_std",
  "zeroable_maybe_uninit",
  "zeroable_atomics",
  "min_const_generics",
  "wasm_simd",
]

[package.metadata.playground]
# Note(Lokathor): Don't use all-features or it would use `unsound_ptr_pod_impl` too.
features = [
  "derive",
  "extern_crate_alloc",
  "extern_crate_std",
  "zeroable_maybe_uninit",
  "zeroable_atomics",
  "min_const_generics",
  "wasm_simd",
]
