[package]
name = "contiguous_bitset"
description = "Stores a set of `bytemuck::Contiguous` values encoded as bits."
repository = "https://github.com/Lokathor/bytemuck"
license = "Zlib OR Apache-2.0 OR MIT"
version = "0.1.1"
edition = "2024"
rust-version = "1.89"

[dependencies]
bytemuck = "1.23"

[features]
track_caller = []
