[package]
name = "bytemuck_derive"
description = "A crate for mucking around with piles of bytes."
version = "1.0.0"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/bytemuck"
readme = "README.md"
keywords = ["transmute", "bytes", "casting"]
categories = ["encoding", "no-std"]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"

[lib]
name = "bytemuck_derive"
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
bytemuck = { version =  "1.3.2-alpha.0", path = ".." }
