[package]
name = "bytemuck_derive"
description = "derive proc-macros for `bytemuck`"
version = "1.2.1"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/bytemuck"
readme = "README.md"
keywords = ["transmute", "bytes", "casting"]
categories = ["encoding", "no-std"]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"

[lib]
name = "bytemuck_derive"
proc-macro = true

[dependencies]
# syn seems to have broken backwards compability in this version https://github.com/dtolnay/syn/issues/1194
syn = "1.0.99"
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
bytemuck = { path = "../", features = ["derive"] }
